# boilerworks-fastapi-micro

./: .env.example  .gitignore  AGENTS.md  BUILD_SPEC.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  bootstrap.md  docker-compose.yaml  pyproject.toml  run.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 072bba4df971_initial_schema.py
app/: config.py  main.py
app/api/: api_keys.py  health.py  webhooks.py
app/auth/: dependencies.py
app/models/: __init__.py  api_key.py  base.py  webhook_event.py
app/schemas/: api_key.py  common.py  webhook.py
tests/: conftest.py  test_api_keys.py  test_health.py  test_webhooks.py
